# AdventOfCode2024

./: .gitignore
01/: CMakeLists.txt  instructions.md
01/src/: input_cleaner.c  input_cleaner.h  main.c
02/: main.py
02/src/: compile_script  main.hs
03/: CMakeLists.txt
03/src/: input_cleaner.c  input_cleaner.h  main.c
06/: CMakeLists.txt
06/src/: board.c  board.h  main.c
